#ifndef MICROMOUSE_INCLUDE_MODEL_CELLTYPE_H_
#define MICROMOUSE_INCLUDE_MODEL_CELLTYPE_H_

/**
 * @brief The CellType enum class represents the different types of cells in the maze.
 * It is used to identify the type of each cell in the maze.
 */
enum class CellType {
  PATH,
  START,
  GOAL
};

#endif //MICROMOUSE_INCLUDE_MODEL_CELLTYPE_H_
